feat: add reg and role
