# backend/routes/user/router.go
@@ -26,4 +26,21 @@ func RegisterRoutes(r *gin.RouterGroup) {
 
 		}
 	}
+	// role
+	role := r.Group("/role")
+	{
+		role.GET("", GetRoleList)   // 获取角色列表
+		role.POST("", CreateRole)   // 创建角色
+		role.PUT("", UpdateRole)    // 更新角色
+		role.DELETE("", DeleteRole) // 删除角色
+	}
+
+	// resource
+	resource := r.Group("/resource")
+	{
+		resource.GET("", GetResourceList)   // 获取资源列表
+		resource.POST("", CreateResource)   // 创建资源
+		resource.PUT("", UpdateResource)    // 更新资源
+		resource.DELETE("", DeleteResource) // 删除资源
+	}
 }
